[gd_scene load_steps=6 format=3 uid="uid://c72maa34f7pcs"]

[ext_resource type="PackedScene" uid="uid://b4ubbk60s6hr1" path="res://scenes/interface/player/stats/bar_container.tscn" id="1"]
[ext_resource type="PackedScene" path="res://scenes/interface/player/inventory/inventory_container.tscn" id="2"]
[ext_resource type="Script" path="res://scripts/interface/hud.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://boo45e1bgfgsr" path="res://scenes/interface/player/inventory/equipment_container.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://dh4v8jsbafuk0" path="res://scenes/interface/player/stats/stats_container.tscn" id="5"]

[node name="Hud" type="CanvasLayer" groups=["hud"]]
script = ExtResource("3")

[node name="InventoryContainer" parent="." instance=ExtResource("2")]
layout_mode = 3
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="StatsContainer" parent="." groups=["stats_hud"] instance=ExtResource("5")]

[node name="EquipmentContainer" parent="." groups=["equipment_container"] instance=ExtResource("4")]
offset_left = 0.0
offset_top = -44.0
offset_right = 44.0
offset_bottom = 0.0

[node name="BarContainer" parent="." instance=ExtResource("1")]
mouse_filter = 2
